# polkavm

./: Cargo.toml
crates/polkavm-linker/src/: dwarf.rs  program_from_elf.rs
crates/polkavm-test-data/: Cargo.toml
crates/polkavm/src/: tests.rs
guest-programs/: build-benchmarks.sh  build-examples.sh
